unit 2/lesson 5 c functions/hw4.cfunction.1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:56:52 **** Rebuild of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
17:01:39 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
Info: Nothing to build for hw4.1
17:07:36 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
..\hw4.1.c: In function 'prime':
..\hw4.1.c:19:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
17:18:44 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
17:19:42 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
..\hw4.1.c: In function 'prime':
..\hw4.1.c:12:13: error: stray '\' in program
  for(i=2;i<x\2;i++)
             ^
..\hw4.1.c:12:14: error: expected ';' before numeric constant
  for(i=2;i<x\2;i++)
              ^
17:22:28 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
17:22:40 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
17:38:42 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
17:39:27 **** Incremental Build of configuration Debug for project hw4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o hw4.1.o "..\\hw4.1.c" 
gcc -o hw4.1.exe hw4.1.o 
Info: Nothing to build for hw4.1
